examples/toolbox.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox
spec:
  selector:
    matchLabels:
      name: toolbox
  template:
    metadata:
      labels:
        name: toolbox
    spec:
      serviceAccountName: toolbox
      containers:
        - name: toolbox
          image: registry.redhat.io/rhel9/toolbox:latest
          command: ['/bin/sh', '-c', 'trap : TERM INT; sleep infinity & wait']
